-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-beta1
-
None
-
Linux and Windows
Steps to reproduce:
- Open Qt Creator
- Make sure you have more than one session configured
- Press Ctrl+Alt+2
Expected:
- Session 2 gets activated
What happens:
Nothing
Using the Tools > Configure > Environment > Keyboard, I can confirm that Qt Creator does recognise the shortcut and shows "Ctrl+Alt+2" in the field if I try to assign to something. qev shows:
QKeyEvent(KeyPress, Key_Control, ControlModifier) QKeyEvent(ShortcutOverride, Key_Alt, ControlModifier|AltModifier) QKeyEvent(KeyPress, Key_Alt, ControlModifier|AltModifier) QKeyEvent(ShortcutOverride, Key_2, ControlModifier|AltModifier, text="\u0000") QKeyEvent(KeyPress, Key_2, ControlModifier|AltModifier, text="\u0000") QKeyEvent(KeyRelease, Key_2, ControlModifier|AltModifier, text="\u0000") QKeyEvent(KeyRelease, Key_Alt, ControlModifier) QKeyEvent(KeyRelease, Key_Control)