src/plugins/projectexplorer/projectwelcomepage.h
@@ -40,7 +40,7 @@ class ProjectModel : public QAbstractListModel
     Q_OBJECT
 
 public:
-    enum { FilePathRole = Qt::UserRole+1, PrettyFilePathRole };
+    enum { FilePathRole = Qt::UserRole+1, PrettyFilePathRole, ShortcutRole };
 
     ProjectModel(QObject *parent = nullptr);
     int rowCount(const QModelIndex &parent) const override;
@@ -55,7 +55,7 @@ class ProjectWelcomePage : public Core::IWelcomePage
 {
     Q_OBJECT
 public:
-    ProjectWelcomePage() = default;
+    ProjectWelcomePage();
 
     QString title() const override { return tr("Projects"); }
     int priority() const override { return 20; }
@@ -73,6 +73,9 @@ signals:
     void manageSessions();
 
 private:
+    void openSessionAt(int index);
+    void openProjectAt(int index);
+
     friend class SessionsPage;
     SessionModel *m_sessionModel = nullptr;
     ProjectModel *m_projectModel = nullptr;
